--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Mandatory info for starting the app
-REACT_APP_MORALIS_APPLICATION_ID = xALcPkGPn19s6WRkcilL67tmCMS3cUTrKi5vn8mM
-REACT_APP_MORALIS_SERVER_URL = 	https://1aqdgcxcw4cz.usemoralis.com:2053/server
+REACT_APP_MORALIS_APPLICATION_ID = kgLZaWZQXPE9h57LOYha7xhHI0qOO41j1MHeIuja
+REACT_APP_MORALIS_SERVER_URL = 	https://qouqzhn0qmwl.usemoralis.com:2053/server
 
 # Optional info for connecting your localChain and Moralis Database
-moralisApiKey = 5DZItthn8CyJY5N
-moralisApiSecret = iOpu6fulbpKoVoJ
+moralisApiKey = Uoghszqs38apCa2
+moralisApiSecret = MmvxJBnkcNhnuev
 frpcPath = F:\frpc\frpc.exe
 chain = ganache
 moralisSubdomain = xxxxxxx.usemoralis.com
